@@ -1,3 +1,9 @@
+2010-04-27  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (LIBXP, LUCID_LIBW, WIDGET_OBJ): Set via configure.
+	(MOTIF_LIBW): Use $LIBXP.
+	(otherobj): Use $WIDGET_OBJ.
+
 2010-04-26  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* Makefile.in (LIBS_MACHINE): Remove, unused.
