@@ -1,3 +1,7 @@
+2010-04-27  Glenn Morris  <rgm@gnu.org>
+
+	* configure.in (LUCID_LIBW, LIBXP, WIDGET_OBJ): New output variables.
+
 2010-04-26  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* configure.in (LIBS_MACHINE): Remove, unused.
